# fantasy-football

./: .gitignore  Cargo.toml  metadata.json  sleeper.duckdb
data/: metadata.json  state.json
data/raw/: metadata.json
data/raw/schedules/regular/: 2024.json  2025.json
scripts/: load_data.sql
src/: cache.rs  client.rs  main.rs
